# linux-systems-programming

./: .gitignore  CLAUDE.md  README.md  _config.yml  index.html
.github/workflows/: pages.yml  validate.yml
_docs/: 00-outline.md  01-prerequisites.md  02-lab-setup.md  03-observability-stack.md  04-syscalls-and-the-abi.md  05-errors-three-ways.md  06-concurrency-three-ways.md  07-fds-raii-and-the-vfs.md  08-page-cache-and-durability.md  09-event-loops-epoll-inotify.md  10-io-uring.md  11-process-lifecycle.md  12-signals-and-safe-handling.md  13-pidfd-modern-process-mgmt.md  14-identity-and-privilege.md  15-virtual-memory.md  16-mmap-and-shared-mappings.md  17-allocators-and-gc-runtimes.md  18-pipes-fifos-splice.md  19-unix-sockets-fd-passing.md  20-shared-memory-coordination.md  21-tcp-sockets.md  22-scaling-the-server.md  23-udp-and-peer-discovery.md  24-time-timers-deadlines.md  25-shared-state-and-the-futex.md  26-atomics-and-lock-free.md  27-async-runtimes-and-coroutines.md  28-gdb-and-remote-debugging.md  29-valgrind-sanitizers-miri.md  30-ebpf-observation-toolkit.md  31-per-language-toolbelts.md  32-namespaces-and-cgroups.md  33-seccomp-and-landlock.md  34-our-programs-in-containers.md  35-virtualization-and-kvm.md  36-proc-sys-and-the-agent.md  37-use-method-60s-analysis.md  38-opentelemetry-to-lgtm.md  39-benchmarking-without-lies.md  (+2 more)
_includes/: codetabs.html  footer.html
_layouts/: default.html
_parts/: 00-setting-up.md  01-foundations.md  02-files-and-io.md  03-processes-signals-privilege.md  04-memory.md  05-ipc.md  06-networking.md  07-concurrency-in-depth.md  08-debugging.md  09-containers-and-virtualization.md  10-observability.md  11-performance-low-latency.md  12-deep-dives.md  13-appendices-tooling.md
_plans/: iteration-plan.md  r09-batch1-golden-capture.md  r09-batch1-stub-completion.md  r10-capstone-fleet.md
assets/css/: site.css
assets/diagrams/: 00-course-map.excalidraw  01-toolchain-landscape.excalidraw  02-lab-topology.excalidraw  03-telemetry-pipeline.excalidraw  04-runtime-syscall-layers.excalidraw  04-user-kernel-path.excalidraw  05-error-flow-three-ways.excalidraw  06-cancellation-drain.excalidraw  06-three-concurrency-models.excalidraw  07-fd-table-vfs.excalidraw  08-write-path-page-cache.excalidraw  09-event-loop-anatomy.excalidraw  10-readiness-vs-completion.excalidraw  10-uring-rings.excalidraw  11-fork-exec-wait-seq.excalidraw  11-process-lifecycle-states.excalidraw  12-signal-delivery-paths.excalidraw  12-supervisor-state-machine.excalidraw  13-pid-reuse-race-pidfd.excalidraw  14-credential-sets-caps.excalidraw  15-address-space-map.excalidraw  15-fault-flow.excalidraw  16-mapping-page-cache.excalidraw  16-shmkv-layout.excalidraw  17-arena-vs-gc.excalidraw  18-log-topology.excalidraw  18-pipe-internals.excalidraw  19-scm-rights-transfer.excalidraw  19-uds-control-plane.excalidraw  20-futex-wait-wake.excalidraw  20-ipc-matrix.excalidraw  21-frame-format.excalidraw  21-server-lifecycle.excalidraw  22-connection-state-machine.excalidraw  22-netpoller-vs-epoll.excalidraw  23-discovery-sequence.excalidraw  23-two-vm-topology.excalidraw  24-clock-taxonomy.excalidraw  24-heartbeat-timeout-seq.excalidraw  25-futex-fast-slow-path.excalidraw  (+35 more)
assets/js/: codetabs.js
examples/: manifest.yaml
examples/01-hello-syscalls/: README.md
examples/04-syscalls-and-the-abi/: README.md  verify.lua
examples/05-errors-three-ways/: README.md  verify.lua
examples/06-concurrency-three-ways/: README.md  verify.lua
examples/07-fds-raii-and-the-vfs/: README.md  verify.lua
examples/08-page-cache-and-durability/: README.md  verify.lua
examples/09-event-loops-epoll-inotify/: README.md  verify.lua
examples/10-io-uring/: README.md  verify.lua
examples/11-process-lifecycle/: README.md  verify.lua
examples/12-signals-and-safe-handling/: README.md  verify.lua
examples/13-pidfd-modern-process-mgmt/: README.md  verify.lua
examples/14-identity-and-privilege/: README.md  verify.lua
examples/15-virtual-memory/: README.md  demo.sh  verify.lua
examples/16-mmap-and-shared-mappings/: README.md  verify.lua
examples/17-allocators-and-gc-runtimes/: README.md  verify.lua
examples/18-pipes-fifos-splice/: README.md  verify.lua
examples/27-async-runtimes-and-coroutines/rust/: Cargo.toml
examples/27-async-runtimes-and-coroutines/rust/src/: main.rs
examples/28-gdb-and-remote-debugging/rust/: Cargo.toml
examples/28-gdb-and-remote-debugging/rust/src/: main.rs
examples/33-seccomp-and-landlock/cpp/: CMakeLists.txt
examples/33-seccomp-and-landlock/cpp/src/: main.cpp
examples/36-proc-sys-and-the-agent/cpp/: CMakeLists.txt
examples/36-proc-sys-and-the-agent/cpp/src/: httpd.cpp  httpd.hpp  main.cpp  procfs.cpp  procfs.hpp
examples/38-opentelemetry-to-lgtm/cpp/: CMakeLists.txt  CMakePresets.json  conanfile.txt  demo.sh
examples/38-opentelemetry-to-lgtm/cpp/src/: main.cpp  telemetry.cpp  telemetry.hpp
examples/38-opentelemetry-to-lgtm/rust/: Cargo.toml
examples/38-opentelemetry-to-lgtm/rust/src/: main.rs
examples/41-capstone-fleet/cpp/: CMakeLists.txt
examples/41-capstone-fleet/cpp/src/: caps.cpp  caps.hpp  chatterd.cpp  chatterd.hpp  fwatch.cpp  fwatch.hpp  main.cpp  pmon.cpp  pmon.hpp  proto.cpp  proto.hpp  sysagent.cpp  sysagent.hpp  telemetry.cpp  telemetry.hpp  util.cpp  util.hpp
examples/41-capstone-fleet/rust/: Cargo.toml
examples/41-capstone-fleet/rust/src/: caps.rs  chatterd.rs  fwatch.rs  main.rs  pmon.rs  proto.rs  sysagent.rs  telemetry.rs  util.rs
examples/_infra/: README.md  (+1 more)
scripts/: check-host.sh  generate_diagram.py  new-example.sh  test-all-examples.py  validate.py
(+322 files in other folders)
